# flask_gallery

./: .env.template  .gitignore  .pylintrc  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: flake8.yml  mypy.yml  pylint.yml
app/: __init__.py  extensions.py
app/controllers/: gallery_controller.py  user_controller.py
app/forms/: album_form.py  gallery_form.py  image_form.py  login.py  login_form.py  user_form.py
app/gallery/: __init__.py  routes.py
app/models/: album.py  gallery.py  image.py  user.py
app/templates/: base.html
app/templates/gallery/: index.html
app/templates/gallery/album/: delete.html  form.html  index.html
app/templates/gallery/gallery/: delete.html  form.html  index.html
app/templates/gallery/image/: form.html
app/templates/user/: form.html  login.html
app/user/: __init__.py  routes.py
app/views/: routes.py
