[tool.poetry]
name = "flask-gallery"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
astroid = "^3.3.5"
blinker = "^1.9.0"
click = "^8.1.7"
dill = "^0.3.9"
dnspython = "^2.7.0"
email-validator = "^2.2.0"
flake8 = "^7.1.1"
flask = "^3.1.0"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
greenlet = "^3.1.1"
idna = "^3.10"
isort = "^5.13.2"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
mariadb = "^1.1.11"
markupsafe = "^3.0.2"
mccabe = "^0.7.0"
mypy = "^1.13.0"
mypy-extensions = "^1.0.0"
packaging = "^24.2"
platformdirs = "^4.3.6"
pycodestyle = "^2.12.1"
pyflakes = "^3.2.0"
pylint = "^3.3.1"
sqlalchemy = "^2.0.36"
tomlkit = "^0.13.2"
typing-extensions = "^4.12.2"
werkzeug = "^3.1.3"
wtforms = "^3.2.1"
gunicorn = "^23.0.0"
python-slugify = "^8.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
